tests/errors/semantic/test_semantic_17_non_array_used_with_parens.f90
program test_semantic_17_non_array_used_with_parens
  implicit none
  integer :: a
  a = 5
  a = a(1)
end program test_semantic_17_non_array_used_with_parens
